# torch-render

./: .pre-commit-config.yaml  pyproject.toml
src/torch_render/: 3d_object.py  __init__.py  render_2d.py
