[project]
name = "torch-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.19.0",
    "jaxtyping>=0.2.34",
    "numpy>=2.1.1",
    "pillow>=10.4.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pre-commit>=3.8.0",
]

[tool.ruff]
lint.ignore = ["F722"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=torch-render,beartype.beartype"
